Entrega_Final/entrega final com erro/uccompiler/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition
    3                         | FunctionDeclaration
    4                         | Declaration
    5                         | FunctionsAndDeclarations FunctionDefinition
    6                         | FunctionsAndDeclarations FunctionDeclaration
    7                         | FunctionsAndDeclarations Declaration

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
   10             | LBRACE RBRACE

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration
   18              | ParameterList COMMA ParameterDeclaration

   19 ParameterDeclaration: TypeSpec IDENTIFIER
   20                     | TypeSpec

   21 Declaration: error SEMI
   22            | TypeSpec Declarations SEMI

   23 Declarations: Declarator
   24             | Declarations COMMA Declarator

   25 TypeSpec: CHAR
   26         | INT
   27         | VOID
   28         | SHORT
   29         | DOUBLE

   30 Declarator: IDENTIFIER
   31           | IDENTIFIER ASSIGN ExprList

   32 Statement: LBRACE error RBRACE
   33          | SEMI
   34          | ExprList SEMI
   35          | LBRACE RBRACE
   36          | LBRACE Statements RBRACE
   37          | IF LPAR ExprList RPAR StatementError
   38          | IF LPAR ExprList RPAR StatementError ELSE StatementError
   39          | WHILE LPAR ExprList RPAR StatementError
   40          | RETURN SEMI
   41          | RETURN ExprList SEMI

   42 StatementError: error SEMI
   43               | Statement

   44 Statements: StatementError
   45           | Statements StatementError

   46 ExprList: Expr
   47         | ExprList COMMA Expr

   48 ExprCall: ExprCall COMMA Expr
   49         | Expr

   50 Expr: IDENTIFIER LPAR error RPAR
   51     | LPAR error RPAR
   52     | IDENTIFIER
   53     | NATURAL
   54     | CHRLIT
   55     | DECIMAL
   56     | LPAR ExprList RPAR
   57     | Expr ASSIGN Expr
   58     | Expr PLUS Expr
   59     | Expr MINUS Expr
   60     | Expr MUL Expr
   61     | Expr DIV Expr
   62     | Expr MOD Expr
   63     | Expr OR Expr
   64     | Expr AND Expr
   65     | Expr BITWISEOR Expr
   66     | Expr BITWISEXOR Expr
   67     | Expr BITWISEAND Expr
   68     | Expr EQ Expr
   69     | Expr NE Expr
   70     | Expr LE Expr
   71     | Expr GE Expr
   72     | Expr LT Expr
   73     | Expr GT Expr
   74     | MINUS Expr
   75     | PLUS Expr
   76     | NOT Expr
   77     | IDENTIFIER LPAR RPAR
   78     | IDENTIFIER LPAR ExprCall RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 21 32 42 50 51
    CHAR (258) 25
    DOUBLE (259) 29
    INT (260) 26
    SHORT (261) 28
    ELSE (262) 38
    WHILE (263) 39
    IF (264) 37 38
    RETURN (265) 40 41
    VOID (266) 27
    BITWISEAND (267) 67
    BITWISEOR (268) 65
    BITWISEXOR (269) 66
    AND (270) 64
    ASSIGN (271) 31 57
    MUL (272) 60
    COMMA (273) 18 24 47 48
    DIV (274) 61
    EQ (275) 68
    GE (276) 71
    GT (277) 73
    LBRACE (278) 9 10 32 35 36
    LE (279) 70
    LPAR (280) 16 37 38 39 50 51 56 77 78
    LT (281) 72
    MINUS (282) 59 74
    MOD (283) 62
    NE (284) 69
    NOT (285) 76
    OR (286) 63
    PLUS (287) 58 75
    RBRACE (288) 9 10 32 35 36
    RPAR (289) 16 37 38 39 50 51 56 77 78
    SEMI (290) 15 21 22 33 34 40 41 42
    IDENTIFIER <token> (291) 16 19 30 31 50 52 77 78
    NATURAL <token> (292) 53
    DECIMAL <token> (293) 55
    CHRLIT <token> (294) 54
    RESERVED <token> (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program <node> (42)
        on left: 1
        on right: 0
    FunctionsAndDeclarations <node> (43)
        on left: 2 3 4 5 6 7
        on right: 1 5 6 7
    FunctionDefinition <node> (44)
        on left: 8
        on right: 2 5
    FunctionBody <node> (45)
        on left: 9 10
        on right: 8
    DeclarationsAndStatements <node> (46)
        on left: 11 12 13 14
        on right: 9 11 12
    FunctionDeclaration <node> (47)
        on left: 15
        on right: 3 6
    FunctionDeclarator <node> (48)
        on left: 16
        on right: 8 15
    ParameterList <node> (49)
        on left: 17 18
        on right: 16 18
    ParameterDeclaration <node> (50)
        on left: 19 20
        on right: 17 18
    Declaration <node> (51)
        on left: 21 22
        on right: 4 7 12 14
    Declarations <node> (52)
        on left: 23 24
        on right: 22 24
    TypeSpec <node> (53)
        on left: 25 26 27 28 29
        on right: 8 15 19 20 22
    Declarator <node> (54)
        on left: 30 31
        on right: 23 24
    Statement <node> (55)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 11 13 43
    StatementError <node> (56)
        on left: 42 43
        on right: 37 38 39 44 45
    Statements <node> (57)
        on left: 44 45
        on right: 36 45
    ExprList <node> (58)
        on left: 46 47
        on right: 31 34 37 38 39 41 47 56
    ExprCall <node> (59)
        on left: 48 49
        on right: 48 78
    Expr <node> (60)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 46 47 48 49 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76


State 0

    0 $accept: • Program $end
    1 Program: • FunctionsAndDeclarations
    2 FunctionsAndDeclarations: • FunctionDefinition
    3                         | • FunctionDeclaration
    4                         | • Declaration
    5                         | • FunctionsAndDeclarations FunctionDefinition
    6                         | • FunctionsAndDeclarations FunctionDeclaration
    7                         | • FunctionsAndDeclarations Declaration
    8 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   21 Declaration: • error SEMI
   22            | • TypeSpec Declarations SEMI
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    INT     shift, and go to state 4
    SHORT   shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   21 Declaration: error • SEMI

    SEMI  shift, and go to state 13


State 2

   25 TypeSpec: CHAR •

    $default  reduce using rule 25 (TypeSpec)


State 3

   29 TypeSpec: DOUBLE •

    $default  reduce using rule 29 (TypeSpec)


State 4

   26 TypeSpec: INT •

    $default  reduce using rule 26 (TypeSpec)


State 5

   28 TypeSpec: SHORT •

    $default  reduce using rule 28 (TypeSpec)


State 6

   27 TypeSpec: VOID •

    $default  reduce using rule 27 (TypeSpec)


State 7

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations •  [$end]
    5 FunctionsAndDeclarations: FunctionsAndDeclarations • FunctionDefinition
    6                         | FunctionsAndDeclarations • FunctionDeclaration
    7                         | FunctionsAndDeclarations • Declaration
    8 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   21 Declaration: • error SEMI
   22            | • TypeSpec Declarations SEMI
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    INT     shift, and go to state 4
    SHORT   shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 1 (Program)

    FunctionDefinition   go to state 15
    FunctionDeclaration  go to state 16
    Declaration          go to state 17
    TypeSpec             go to state 12


State 9

    2 FunctionsAndDeclarations: FunctionDefinition •

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration •

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 11

    4 FunctionsAndDeclarations: Declaration •

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 12

    8 FunctionDefinition: TypeSpec • FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec • FunctionDeclarator SEMI
   16 FunctionDeclarator: • IDENTIFIER LPAR ParameterList RPAR
   22 Declaration: TypeSpec • Declarations SEMI
   23 Declarations: • Declarator
   24             | • Declarations COMMA Declarator
   30 Declarator: • IDENTIFIER
   31           | • IDENTIFIER ASSIGN ExprList

    IDENTIFIER  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarations        go to state 20
    Declarator          go to state 21


State 13

   21 Declaration: error SEMI •

    $default  reduce using rule 21 (Declaration)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition •

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 16

    6 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration •

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 17

    7 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration •

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: IDENTIFIER • LPAR ParameterList RPAR
   30 Declarator: IDENTIFIER •  [COMMA, SEMI]
   31           | IDENTIFIER • ASSIGN ExprList

    ASSIGN  shift, and go to state 22
    LPAR    shift, and go to state 23

    $default  reduce using rule 30 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator • FunctionBody
    9 FunctionBody: • LBRACE DeclarationsAndStatements RBRACE
   10             | • LBRACE RBRACE
   15 FunctionDeclaration: TypeSpec FunctionDeclarator • SEMI

    LBRACE  shift, and go to state 24
    SEMI    shift, and go to state 25

    FunctionBody  go to state 26


State 20

   22 Declaration: TypeSpec Declarations • SEMI
   24 Declarations: Declarations • COMMA Declarator

    COMMA  shift, and go to state 27
    SEMI   shift, and go to state 28


State 21

   23 Declarations: Declarator •

    $default  reduce using rule 23 (Declarations)


State 22

   31 Declarator: IDENTIFIER ASSIGN • ExprList
   46 ExprList: • Expr
   47         | • ExprList COMMA Expr
   50 Expr: • IDENTIFIER LPAR error RPAR
   51     | • LPAR error RPAR
   52     | • IDENTIFIER
   53     | • NATURAL
   54     | • CHRLIT
   55     | • DECIMAL
   56     | • LPAR ExprList RPAR
   57     | • Expr ASSIGN Expr
   58     | • Expr PLUS Expr
   59     | • Expr MINUS Expr
   60     | • Expr MUL Expr
   61     | • Expr DIV Expr
   62     | • Expr MOD Expr
   63     | • Expr OR Expr
   64     | • Expr AND Expr
   65     | • Expr BITWISEOR Expr
   66     | • Expr BITWISEXOR Expr
   67     | • Expr BITWISEAND Expr
   68     | • Expr EQ Expr
   69     | • Expr NE Expr
   70     | • Expr LE Expr
   71     | • Expr GE Expr
   72     | • Expr LT Expr
   73     | • Expr GT Expr
   74     | • MINUS Expr
   75     | • PLUS Expr
   76     | • NOT Expr
   77     | • IDENTIFIER LPAR RPAR
   78     | • IDENTIFIER LPAR ExprCall RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    ExprList  go to state 37
    Expr      go to state 38


State 23

   16 FunctionDeclarator: IDENTIFIER LPAR • ParameterList RPAR
   17 ParameterList: • ParameterDeclaration
   18              | • ParameterList COMMA ParameterDeclaration
   19 ParameterDeclaration: • TypeSpec IDENTIFIER
   20                     | • TypeSpec
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    CHAR    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    INT     shift, and go to state 4
    SHORT   shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 39
    ParameterDeclaration  go to state 40
    TypeSpec              go to state 41


State 24

    9 FunctionBody: LBRACE • DeclarationsAndStatements RBRACE
   10             | LBRACE • RBRACE
   11 DeclarationsAndStatements: • DeclarationsAndStatements Statement
   12                          | • DeclarationsAndStatements Declaration
   13                          | • Statement
   14                          | • Declaration
   21 Declaration: • error SEMI
   22            | • TypeSpec Declarations SEMI
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE
   32 Statement: • LBRACE error RBRACE
   33          | • SEMI
   34          | • ExprList SEMI
   35          | • LBRACE RBRACE
   36          | • LBRACE Statements RBRACE
   37          | • IF LPAR ExprList RPAR StatementError
   38          | • IF LPAR ExprList RPAR StatementError ELSE StatementError
   39          | • WHILE LPAR ExprList RPAR StatementError
   40          | • RETURN SEMI
   41          | • RETURN ExprList SEMI
   46 ExprList: • Expr
   47         | • ExprList COMMA Expr
   50 Expr: • IDENTIFIER LPAR error RPAR
   51     | • LPAR error RPAR
   52     | • IDENTIFIER
   53     | • NATURAL
   54     | • CHRLIT
   55     | • DECIMAL
   56     | • LPAR ExprList RPAR
   57     | • Expr ASSIGN Expr
   58     | • Expr PLUS Expr
   59     | • Expr MINUS Expr
   60     | • Expr MUL Expr
   61     | • Expr DIV Expr
   62     | • Expr MOD Expr
   63     | • Expr OR Expr
   64     | • Expr AND Expr
   65     | • Expr BITWISEOR Expr
   66     | • Expr BITWISEXOR Expr
   67     | • Expr BITWISEAND Expr
   68     | • Expr EQ Expr
   69     | • Expr NE Expr
   70     | • Expr LE Expr
   71     | • Expr GE Expr
   72     | • Expr LT Expr
   73     | • Expr GT Expr
   74     | • MINUS Expr
   75     | • PLUS Expr
   76     | • NOT Expr
   77     | • IDENTIFIER LPAR RPAR
   78     | • IDENTIFIER LPAR ExprCall RPAR

    error       shift, and go to state 1
    CHAR        shift, and go to state 2
    DOUBLE      shift, and go to state 3
    INT         shift, and go to state 4
    SHORT       shift, and go to state 5
    WHILE       shift, and go to state 42
    IF          shift, and go to state 43
    RETURN      shift, and go to state 44
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 45
    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    RBRACE      shift, and go to state 46
    SEMI        shift, and go to state 47
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    DeclarationsAndStatements  go to state 48
    Declaration                go to state 49
    TypeSpec                   go to state 50
    Statement                  go to state 51
    ExprList                   go to state 52
    Expr                       go to state 38


State 25

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI •

    $default  reduce using rule 15 (FunctionDeclaration)


State 26

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody •

    $default  reduce using rule 8 (FunctionDefinition)


State 27

   24 Declarations: Declarations COMMA • Declarator
   30 Declarator: • IDENTIFIER
   31           | • IDENTIFIER ASSIGN ExprList

    IDENTIFIER  shift, and go to state 53

    Declarator  go to state 54


State 28

   22 Declaration: TypeSpec Declarations SEMI •

    $default  reduce using rule 22 (Declaration)


State 29

   46 ExprList: • Expr
   47         | • ExprList COMMA Expr
   50 Expr: • IDENTIFIER LPAR error RPAR
   51     | • LPAR error RPAR
   51     | LPAR • error RPAR
   52     | • IDENTIFIER
   53     | • NATURAL
   54     | • CHRLIT
   55     | • DECIMAL
   56     | • LPAR ExprList RPAR
   56     | LPAR • ExprList RPAR
   57     | • Expr ASSIGN Expr
   58     | • Expr PLUS Expr
   59     | • Expr MINUS Expr
   60     | • Expr MUL Expr
   61     | • Expr DIV Expr
   62     | • Expr MOD Expr
   63     | • Expr OR Expr
   64     | • Expr AND Expr
   65     | • Expr BITWISEOR Expr
   66     | • Expr BITWISEXOR Expr
   67     | • Expr BITWISEAND Expr
   68     | • Expr EQ Expr
   69     | • Expr NE Expr
   70     | • Expr LE Expr
   71     | • Expr GE Expr
   72     | • Expr LT Expr
   73     | • Expr GT Expr
   74     | • MINUS Expr
   75     | • PLUS Expr
   76     | • NOT Expr
   77     | • IDENTIFIER LPAR RPAR
   78     | • IDENTIFIER LPAR ExprCall RPAR

    error       shift, and go to state 55
    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    ExprList  go to state 56
    Expr      go to state 38


State 30

   50 Expr: • IDENTIFIER LPAR error RPAR
   51     | • LPAR error RPAR
   52     | • IDENTIFIER
   53     | • NATURAL
   54     | • CHRLIT
   55     | • DECIMAL
   56     | • LPAR ExprList RPAR
   57     | • Expr ASSIGN Expr
   58     | • Expr PLUS Expr
   59     | • Expr MINUS Expr
   60     | • Expr MUL Expr
   61     | • Expr DIV Expr
   62     | • Expr MOD Expr
   63     | • Expr OR Expr
   64     | • Expr AND Expr
   65     | • Expr BITWISEOR Expr
   66     | • Expr BITWISEXOR Expr
   67     | • Expr BITWISEAND Expr
   68     | • Expr EQ Expr
   69     | • Expr NE Expr
   70     | • Expr LE Expr
   71     | • Expr GE Expr
   72     | • Expr LT Expr
   73     | • Expr GT Expr
   74     | • MINUS Expr
   74     | MINUS • Expr
   75     | • PLUS Expr
   76     | • NOT Expr
   77     | • IDENTIFIER LPAR RPAR
   78     | • IDENTIFIER LPAR ExprCall RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 57


State 31

   50 Expr: • IDENTIFIER LPAR error RPAR
   51     | • LPAR error RPAR
   52     | • IDENTIFIER
   53     | • NATURAL
   54     | • CHRLIT
   55     | • DECIMAL
   56     | • LPAR ExprList RPAR
   57     | • Expr ASSIGN Expr
   58     | • Expr PLUS Expr
   59     | • Expr MINUS Expr
   60     | • Expr MUL Expr
   61     | • Expr DIV Expr
   62     | • Expr MOD Expr
   63     | • Expr OR Expr
   64     | • Expr AND Expr
   65     | • Expr BITWISEOR Expr
   66     | • Expr BITWISEXOR Expr
   67     | • Expr BITWISEAND Expr
   68     | • Expr EQ Expr
   69     | • Expr NE Expr
   70     | • Expr LE Expr
   71     | • Expr GE Expr
   72     | • Expr LT Expr
   73     | • Expr GT Expr
   74     | • MINUS Expr
   75     | • PLUS Expr
   76     | • NOT Expr
   76     | NOT • Expr
   77     | • IDENTIFIER LPAR RPAR
   78     | • IDENTIFIER LPAR ExprCall RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 58


State 32

   50 Expr: • IDENTIFIER LPAR error RPAR
   51     | • LPAR error RPAR
   52     | • IDENTIFIER
   53     | • NATURAL
   54     | • CHRLIT
   55     | • DECIMAL
   56     | • LPAR ExprList RPAR
   57     | • Expr ASSIGN Expr
   58     | • Expr PLUS Expr
   59     | • Expr MINUS Expr
   60     | • Expr MUL Expr
   61     | • Expr DIV Expr
   62     | • Expr MOD Expr
   63     | • Expr OR Expr
   64     | • Expr AND Expr
   65     | • Expr BITWISEOR Expr
   66     | • Expr BITWISEXOR Expr
   67     | • Expr BITWISEAND Expr
   68     | • Expr EQ Expr
   69     | • Expr NE Expr
   70     | • Expr LE Expr
   71     | • Expr GE Expr
   72     | • Expr LT Expr
   73     | • Expr GT Expr
   74     | • MINUS Expr
   75     | • PLUS Expr
   75     | PLUS • Expr
   76     | • NOT Expr
   77     | • IDENTIFIER LPAR RPAR
   78     | • IDENTIFIER LPAR ExprCall RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 59


State 33

   50 Expr: IDENTIFIER • LPAR error RPAR
   52     | IDENTIFIER •  [BITWISEAND, BITWISEOR, BITWISEXOR, AND, ASSIGN, MUL, COMMA, DIV, EQ, GE, GT, LE, LT, MINUS, MOD, NE, OR, PLUS, RPAR, SEMI]
   77     | IDENTIFIER • LPAR RPAR
   78     | IDENTIFIER • LPAR ExprCall RPAR

    LPAR  shift, and go to state 60

    $default  reduce using rule 52 (Expr)


State 34

   53 Expr: NATURAL •

    $default  reduce using rule 53 (Expr)


State 35

   55 Expr: DECIMAL •

    $default  reduce using rule 55 (Expr)


State 36
